# DNDPLHLS-v1

./: .dependency-cruiser.cjs  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  AR_README.md  App.tsx  README.md  audioEngine.ts  capacitor.config.ts  constants.ts  create-fast-avd.md  fix-adb-issues.ps1  fix-android-emulator.ps1  gmConstants.ts  index.css  index.html  index.tsx  jest.config.cjs  metadata.json  midi-file.d.ts  midiOut.ts  musicLogic.ts  nw-runner.json  package-lock.json  package.json  playwright.config.ts  raw.d.ts  timbreEngine.ts  timbrePresets.ts  tsconfig.api.json  tsconfig.check.json  typecheck_log.txt  types.ts  typesImpl.ts  typesPart1.ts  typesPart2.ts  use-physical-device.md  vite-env.d.ts  vite.config.ts
.githooks/: pre-commit
assets/: hunt205_ring_layout.json
backend/: README.md  eslint.config.js  package.json
cloud/: README.md  apiClient.ts  types.ts
components/: ARContainer.tsx  ARLattice.tsx  DesktopOverlay.tsx  LandingPage.tsx  Lattice3D.tsx  NamingSetupScreen.tsx  SetupScreen.tsx
data/: museumExhibits.ts
docs/: ALGORITHM_SPECS.md  EXHIBIT_STAND_ARTIFACT_A_EXECUTION_CHECKLIST.md  LIGHTING_CALIBRATION.md  MUSEUM_EXECUTION_CHECKLIST.md  MUSEUM_MODDING.md  P1_VISUAL_REALISM_EXECUTION_CHECKLIST.md  P2_BAKED_LIGHTING_PIPELINE_BLENDER_TO_WEBGL.md  README.md  THEORY_MASTER_PLAN.md  jnd-upload-supabase.md  refactor-contract.md
engine/: museumAcoustics.ts
harmonic-lattice-native-ar/: AGENTS.md
hooks/: useAudioController.ts  useDeviceType.ts  (+5 more)
native/juce/TuningMiddlewareHost/: CMakeLists.txt  PluginProcessor.cpp  PluginProcessor.h
native/juce/TuningMiddlewareHost/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  RpcBridge.cpp  RpcBridge.h  TuningEngine.cpp  TuningEngine.h  WebViewComponent.cpp  WebViewComponent.h
(+607 files in other folders)
